# aoc

./: .gitignore  README.md  list_models.py  pyproject.toml  requirements.txt  run_full_pipeline.sh  test_pipeline.py
aoc/: __init__.py  __main__.py  agent_fabric.py  archetypes.py  benchmarks.py  calculators.py  cli.py  config.py  critics.py  decision_engine.py  design_artifacts.py  diagrams.py  document_facts.py  economics_v2.py  evidence.py  family_adapters.py  flowsheet.py  flowsheet_blueprint.py  formatter.py  llm.py  mechanical.py  methods.py  models.py  operations.py  pipeline.py  publish.py  reactor_mechanical_report.py  reasoning.py  report_parity.py  research.py  route_chemistry.py  route_families.py  route_planning.py  scientific_inference.py  selectors.py  solver_architecture.py  sparse_data.py  store.py  unit_operation_families.py  utility_architecture.py  (+2 more)
docs/: any_compound_tefr_backlog.md  appendix_parity_backlog.md  bac_ppt_consistency_review.md  bac_ppt_curated_tables.md  bac_ppt_final_polish.md  bac_ppt_master_data.md  bac_ppt_numeric_validation.md  bac_ppt_presentation_risk_rules.md  bac_ppt_slide_draft_01_12.md  bac_ppt_slide_draft_13_24.md  bac_ppt_slide_draft_25_36.md  bac_ppt_visual_integration.md  bac_real_data_mode.md  benchmark_expansion_v1_backlog.md  deep_unit_design_parity_backlog.md  diagram_architecture_bac_rendering_audit.md  diagram_architecture_phase1.md  diagram_architecture_phase10.md  diagram_architecture_phase11.md  diagram_architecture_phase12.md  diagram_architecture_phase13.md  diagram_architecture_phase14.md  (+38 more)
tests/: test_vle.py  (+28 more)
(+236 files in other folders)
